# kadis_benchmark

./: CLI_mpi.hpp  CMakeLists.txt  README.md  benchmark.cpp
eval/: logparser.py  make_plot.py
